# mnist_with_cpp_and_cuda

./: .gitignore  BACKPROP_EXPLANATION.md  CMakeLists.txt  DEBUGGING_NOTES.md  README.md  download_mnist.py  requirements.txt  test_predictions.cpp
include/: cuda_kernels.h  mat_reader.h  neural_network.h
src/: cuda_kernels.cu  main.cpp  mat_reader.cpp  neural_network.cpp
tests/: README.md  test_neural_network.cpp
